--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,15 @@
 
 @import "{{ site.theme }}";
 
+.container {
+  max-width: 1000px;
+}
+
 header h1 a {
   color: #b5e853;
   text-decoration: none;
-} 
+}
+
+code {
+  font-family: "Fira Code", "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
+}
