--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,7 @@ header h1 a {
 code {
   font-family: "Fira Code", "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
 }
+
+li.teaser {
+  margin-bottom: 5px;
+}
